corrected style legal notice - text alignement

--- a/src/app/legal-notice/legal-notice.component.sass
+++ b/src/app/legal-notice/legal-notice.component.sass
@@ -4,8 +4,6 @@
     margin-left: 0
     margin-right: 0
 
-    
-    
 .legal-notice
     display: flex
     align-items: center
@@ -19,107 +17,80 @@
     font-family: 'Montserrat', sans-serif
     line-height: 1.6
 
-    div
-        display: block
-        text-align: left
-
-    h4
-        font-family: 'Baloo 2', sans-serif
-        font-size: 1.75rem
-        font-weight: 700  
-        color: #5988FF
-        margin-bottom: 10px
-
-    span
+    .txt
         display: flex
+        flex-direction: column
         justify-content: center
-        width: 100%
-        height: auto
-        font-family: 'Montserrat', sans-serif
-        font-size: 1.125rem
-        font-weight: 400
-        color: #5988FF
+        padding: 150px
 
-    h2
-        font-family: 'Baloo 2', sans-serif
-        font-size: 2.5rem
-        font-weight: 700
-        color: #5988FF
-        margin-bottom: 10px
-
-.txt
-    display: flex
-    justify-content: center
-    padding: 150px
-
-.legal-notice-header
-
-    h4
-        font-size: 32px
-        font-weight: 700
-        color: #5988FF
-        margin-bottom: 10px
-
-
-.legal-notice-item
-    margin-bottom: 15px
-
-    h4
-        font-size: 26px
-        font-weight: 700
-        color: #5988FF
-
-    span
-        font-size: 18px
-        color: #555
-        line-height: 1.6
-
-
-
-@media ( max-width: 800px )
-
-    .legal-notice,
-    .legal-notice-item,
-    .legal-notice-header
         h2
             font-family: 'Baloo 2', sans-serif
-            font-size: 2rem
+            font-size: 2.5rem
             font-weight: 700
             color: #5988FF
             margin-bottom: 10px
 
+    .legal-notice-item
+        margin-bottom: 15px
+
         h4
             font-family: 'Baloo 2', sans-serif
-            font-size: 1.3rem
+            font-size: 1.75rem
             font-weight: 700  
             color: #5988FF
             margin-bottom: 10px
 
         span
-            font-size: 1rem
-            color: #555
-            line-height: 1.6
-            
+            display: flex
+            justify-content: flex-start
+            margin-left: 1rem
+            width: 100%
+            height: auto
+            font-family: 'Montserrat', sans-serif
+            font-size: 1.125rem
+            font-weight: 400
+            color: #5988FF
+
+/* .legal-notice-header wurde entfernt – kam im HTML nicht mehr vor */
+
+@media (max-width: 800px)
+    .legal-notice
         .txt
             padding: min(3em, 15%)
             margin-top: 100px
 
-@media ( max-width: 520px )
-    .legal-notice,
-    .legal-notice-item,
-    .legal-notice-header
-        
-        h2
-            font-size: 1.1rem
-            font-weight: 400
-            margin-bottom: 10px
+            h2
+                font-size: 2rem
+                font-weight: 700
+                color: #5988FF
+                margin-bottom: 10px
 
-        h4
-            font-size: 1rem
-            font-weight: 400  
-            margin-bottom: 10px
+        .legal-notice-item
+            h4
+                font-size: 1.3rem
+                font-weight: 700  
+                color: #5988FF
+                margin-bottom: 10px
 
-        span
-            font-size: 0.9rem
-            line-height: 1
-            
+            span
+                font-size: 1rem
+                color: #555
+                line-height: 1.6
+
+@media (max-width: 520px)
+    .legal-notice
+        .txt
+            h2
+                font-size: 1.1rem
+                font-weight: 400
+                margin-bottom: 10px
+
+        .legal-notice-item
+            h4
+                font-size: 1rem
+                font-weight: 400  
+                margin-bottom: 10px
+
+            span
+                font-size: 0.9rem
+                line-height: 1
